--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,12 +4,13 @@ body, html {
     line-height: 1.8;
     font-family: 'Montserrat', sans-serif;
     color: #555e58;
-    text-transform: capitalize;
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
     font-weight: 400;
     margin: 0px;
     padding: 0px;
+    transition: all 0.3s ease;
+    ;
 }
 
 
